Fixed horizontal body overflow.

--- a/_andrei.scss
+++ b/_andrei.scss
@@ -1,5 +1,6 @@
 body {
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
   &.page .comments-area {
     display: none;
   }
